--- a/index.html
+++ b/index.html
@@ -3,86 +3,162 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Store</title>
+    <title>FrontEnd Store</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <img src="img/logo.png" alt="Logotipo">
+    <header class="header">
+        <a href="index.html">
+            <img class="header__logo" src="img/logo.png" alt="Logotipo">
+        </a>
     </header>
-    <div class="contenedor">
-        <div class="hero">
-            <img src="img/hero.jpg" alt="imagen hero">
+
+    <nav class="navegacion">
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+    </nav>
+
+    <main class="contenedor">
+        <h1>Nuestros Productos</h1>
+
+        <div class="grid">
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">AngularJS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">ReactJS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Redux</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Node.js</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">SASS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">HTML5</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Github</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">BulmaCSS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">TypeScript</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">JavaScript</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">WordPress</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>  <!--.producto-->
+
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
         </div>
+    </main>
 
-        <main>
-            <h2>Nuestros Productos</h2>
-
-            <ul class="lista-productos">
-                <li>
-                    <img src="img/1.jpg" alt="Producto">
-                    <p>VueJS <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/2.jpg" alt="Producto">
-                    <p>AngularJS <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/3.jpg" alt="Producto">
-                    <p>React <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/4.jpg" alt="Producto">
-                    <p>Redux <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/5.jpg" alt="Producto">
-                    <p>Node.JS <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/6.jpg" alt="Producto">
-                    <p>SASS <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/7.jpg" alt="Producto">
-                    <p>HTML5 <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/8.jpg" alt="Producto">
-                    <p>Github <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/9.jpg" alt="Producto">
-                    <p>Bulma CSS <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/10.jpg" alt="Producto">
-                    <p>TypeScript <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/11.jpg" alt="Producto">
-                    <p>Drupal <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                <li>
-                    <img src="img/12.jpg" alt="Producto">
-                    <p>JavaScript <span class="precio">$25</span></p>
-                    <a href="#" class="boton">Comprar</a>
-                </li>
-                
-            </ul>
-        </main>
-    </div><!--contenedor-->
+    <footer class="footer">
+        <p class="footer__texto">Front End Store - Todos los derechos Reservados 2022.</p>
+    </footer>
+    
 </body>
 </html>
